Fix search block alignment and width settings

--- a/assets/scss/components/blocks/_search.scss
+++ b/assets/scss/components/blocks/_search.scss
@@ -1,12 +1,25 @@
 .wp-block-search {
+	display: flex;
+
+	--search-input-max-width: 100%;
 	--button-margin: 0 0 0 var(--search-button-margin-left, calc(var(--spacing-xl) * -1));
+
+	&.alignleft {
+		justify-content: flex-start;
+		float: none;
+	}
 
 	&.aligncenter {
 		justify-content: center;
 	}
 
+	&.alignright {
+		justify-content: flex-end;
+		float: none;
+	}
+
 	.wp-block-search__inside-wrapper {
-		display: inline-flex;
+		flex: 0 1 var(--min-width, 3em);
 	}
 
 	.wp-block-search__label {
@@ -15,8 +28,7 @@
 	}
 
 	.wp-block-search__input {
-		flex: 1 1 200px;
-		min-width: var(--search-input-min-width, 256px); // Overides WP core styles with default in _form.scss.
+		flex: 1;
 		padding-right: var(--search-input-padding-right, calc(var(--spacing-xl) * -1));
 		border: var(--input-border, 1px solid rgba(0, 0, 0, 0.1)); // Overides WP core styles.
 
